Finalizing the changes

--- a/blogs/static/blogs/blogs.scss
+++ b/blogs/static/blogs/blogs.scss
@@ -372,7 +372,7 @@ footer h2{
 }
 
 #decor{
-    width: 100vw;
+    width: 100%;
    background: linear-gradient(0deg, transparent 50%, #8D0020 50%);
 }
 
