--- a/pages_static/static/pages_static/css/styles.scss
+++ b/pages_static/static/pages_static/css/styles.scss
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Corinthia:wght@700&display=swap");
 
-.flip-card{
+.flip-card {
   perspective: 1000px;
   height: fit-content;
   width: auto;
-  .card{
+  .card {
     width: fit-content;
   }
-  .flip-card-inner{
+  .flip-card-inner {
     position: relative;
     // width: 100%;
     // height: 100%;
@@ -16,10 +16,14 @@
     transition: transform 0.8s;
     transform-style: preserve-3d;
   }
-  &:hover .flip-card-inner {
-    transform: rotateY(180deg);
+  @media (min-width: 992px) {
+    &:hover .flip-card-inner {
+      transform: rotateY(180deg);
+    }
   }
-  .flip-card-front, .flip-card-back {
+
+  .flip-card-front,
+  .flip-card-back {
     -webkit-backface-visibility: hidden; /* Safari */
     backface-visibility: hidden;
   }
@@ -326,14 +330,13 @@ footer {
   background-position: 0%;
 }
 
-
-.col-nav{
+.col-nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.mob_view{
+.mob_view {
   display: none !important;
 }
 .hamburger {
@@ -355,15 +358,15 @@ footer {
   transition: all 0.3s ease-in-out;
   background-color: #ffce76;
 }
-.mnav{
+.mnav {
   display: none;
 }
-.logos{
+.logos {
   display: flex;
   justify-content: space-between;
   width: 20%;
 }
-#pop_up{
+#pop_up {
   display: none;
   position: fixed;
   top: 0;
@@ -372,17 +375,17 @@ footer {
   height: 100vh;
   align-items: center;
 }
-#pop_up.active{
+#pop_up.active {
   display: flex;
 }
-.p_cont{
+.p_cont {
   background: #8d0020;
   padding: 5%;
   color: white;
-  width : 40%;
+  width: 40%;
   margin: auto;
 }
-.cross{
+.cross {
   float: right;
   color: #ffce76;
   font-size: 30px;
@@ -399,22 +402,22 @@ footer {
   border: none;
   background: #ffce76;
 }
-.nav_items{
-    color: #8d0020 !important;
-    background: #ffe65c;
-    border-radius: 10px;
-    padding: 1.9%;
+.nav_items {
+  color: #8d0020 !important;
+  background: #ffe65c;
+  border-radius: 10px;
+  padding: 1.9%;
 }
 
-.e_name{
+.e_name {
   font-family: Analogue;
   font-style: normal;
   font-weight: normal;
 }
-.h_underline{
+.h_underline {
   text-decoration: underline solid #000000;
 }
-.story{
+.story {
   font-family: Analogue;
   font-style: normal;
   font-weight: normal;
@@ -423,28 +426,39 @@ footer {
   text-align: center;
   color: #000000;
 }
-.story_img{
+.story_img {
   border-radius: 50%;
   width: 140px;
   height: 140px;
   transform: translateX(-3px);
 }
-.story_btn{
+.story_btn {
   border-radius: 50%;
   width: 150px;
   height: 150px;
-  background: linear-gradient(318.05deg, #DA8741 9.88%, #A83279 51.33%, #7723BE 82.94%);;
+  background: linear-gradient(
+    318.05deg,
+    #da8741 9.88%,
+    #a83279 51.33%,
+    #7723be 82.94%
+  );
 }
-.story_div{
+.story_div {
   display: flex;
   justify-content: space-evenly;
   width: 50%;
   margin: auto;
 }
-.hover_part1 , .hover_part2 , .hover_part3 ,.hover_part4 {
+.hover_part1,
+.hover_part2,
+.hover_part3,
+.hover_part4 {
   display: none;
 }
-.hov1:hover + .hover_part1 , .hov2:hover + .hover_part2 , .hov3:hover + .hover_part3 , .hov4:hover + .hover_part4 {
+.hov1:hover + .hover_part1,
+.hov2:hover + .hover_part2,
+.hov3:hover + .hover_part3,
+.hov4:hover + .hover_part4 {
   display: flex;
   position: absolute;
   background: url(/static/pages_static/images/index/instagram.svg);
@@ -456,47 +470,47 @@ footer {
   background-color: #00000082;
 }
 a.nav-item {
-    font-family: Alegreya;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 30px;
-    text-align: center;
-    color: rgba(255, 206, 118, 0.86);
+  font-family: Alegreya;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 30px;
+  text-align: center;
+  color: rgba(255, 206, 118, 0.86);
 }
-.thanks_img{
-    padding: 5%;
+.thanks_img {
+  padding: 5%;
 }
 /*# sourceMappingURL=styles.css.map */
 
 @media only screen and (max-width: 700px) {
-  header{
+  header {
     background: none;
     padding: inherit;
   }
-  .desk_view{
+  .desk_view {
     display: none !important;
   }
-  .mob_view{
+  .mob_view {
     display: block !important;
     text-align: center;
     padding-bottom: 2%;
     background-color: #8d0020;
   }
-  .panaya{
+  .panaya {
     color: #ffce76;
     font-family: "Playfair Display", serif;
     font-size: 2rem;
   }
-  .panaya_d{
+  .panaya_d {
     font-family: "Corinthia", cursive;
-    font-size: 1.0rem;
+    font-size: 1rem;
     color: #ffce76;
   }
-  header nav div{
+  header nav div {
     width: 100%;
   }
-  .hamburger{
+  .hamburger {
     display: block;
     cursor: pointer;
     width: auto !important;
@@ -506,37 +520,37 @@ a.nav-item {
   }
 
   .hamburger.active .bar:nth-child(1) {
-      transform: translateY(8px) rotate(45deg);
+    transform: translateY(8px) rotate(45deg);
   }
 
   .hamburger.active .bar:nth-child(3) {
-      transform: translateY(-8px) rotate(-45deg);
+    transform: translateY(-8px) rotate(-45deg);
   }
-  .mnav.active{
+  .mnav.active {
     display: block;
     width: auto;
   }
-  .logos{
+  .logos {
     width: 30%;
   }
-  .p_cont{
+  .p_cont {
     width: 90%;
   }
   .p_cont input {
     width: -webkit-fill-available;
   }
-  .cross{
+  .cross {
     margin-top: -4%;
     font-size: 25px;
   }
-  .story_div{
+  .story_div {
     width: 100%;
   }
-  .story_btn{
+  .story_btn {
     width: 100px;
     height: 100px;
   }
-  .story_img{
+  .story_img {
     width: 90px;
     height: 90px;
   }
@@ -547,22 +561,22 @@ a.nav-item {
   #banaras-store {
     min-height: auto !important;
   }
-  .thanks_img{
+  .thanks_img {
     padding: 0%;
-   }
-   .thanks_text{
-       font-size : 15px !important;
-   }
+  }
+  .thanks_text {
+    font-size: 15px !important;
+  }
 }
 
 @media only screen and (min-width: 700px) and (max-width: 900px) {
   header nav a {
     font-size: 15px !important;
   }
-  header nav div{
+  header nav div {
     width: 30%;
   }
-  .mail_input{
+  .mail_input {
     font-size: 8px;
   }
 }
