--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -51,7 +51,7 @@
           />
         </div>
         <div class="container" style="text-align: -webkit-center;" class="explore-banaras">
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4">
+          <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4">
             {% for category in categories %}
             <div class="col mt-5 text-center d-flex justify-content-center">
               <div class="flip-card">
@@ -156,7 +156,7 @@
             innovating with the highest levels of artistry and hand
             craftsmanship in Banaras. Its single edition sarees are
             contemporary heirlooms for today’s connoisseurs. Each
-            One-of-a-Kind saree is handwoven over several months,
+            One-of-a-kind saree is handwoven over several months,
             benchmarking excellence in quality of materials and design which
             attempt to match historical masterpieces, ensuring
             simultaneously, comfort for today’s wearer.
