--- a/product/static/products/css/product.scss
+++ b/product/static/products/css/product.scss
@@ -58,11 +58,11 @@ a {
 
   .cross {
     position: absolute;
-    right: 0;
+    right: 0rem;
 
     color: rgba(244, 157, 55, 0.97);
     background-color: transparent;
-    font-size: 3vw;
+    font-size: max(3vw, 2rem);
     // color: #8d0020;
   }
 
