--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -161,17 +161,23 @@
     {% endfor %}
   </div>
 </section>
-<!-- POP UP -->
+<!-- CART POP UP -->
 <div class="modal fade" id="cartModal" tabindex="-1" aria-labelledby="cartModalLabel" aria-hidden="true">
   <div class="modal-dialog" style="margin: 0rem 0rem 0rem auto">
     <div class="modal-content">
       <div id="pop">
-        <div style="float: right" data-bs-dismiss="modal" aria-label="Close">
-          <i class="cross fas fa-times-circle"></i>
-        </div>
+        {% comment %} <div style="float: right" data-bs-dismiss="modal" aria-label="Close"> {% endcomment %}
+          {% comment %} </div> {% endcomment %}
         <div class="container">
-          <div class="txt-sp-yellow text-center">
-            <h1>Cart</h1>
+          <div class="row">
+            <div class="col">
+              <div class="txt-sp-yellow text-center">
+                <h2>Cart</h2>
+              </div>
+            </div>
+            <div class="col-auto">
+              <i class="cross fas fa-times-circle mt-1 me-1" data-bs-dismiss="modal" aria-label="Close"></i>
+            </div>
           </div>
 
           <div class="container mt-3" id="cart-container"></div>
@@ -180,13 +186,13 @@
           <a class="me-2 text-white text-decoration-underline" href="{% url 'cart' %}" id="plus-items"></a>
         </div>
         <div class="my-1 cart_hr"></div>
-        <h3 class="txt-sp-yellow text-center">
+        <h4 class="txt-sp-yellow text-center">
           Sub Total - <span id="cart-total"> Rs. 0</span>
-        </h3>
+        </h4>
         <div class="my-1 cart_hr"></div>
-        <div class="view_c mt-5"> <a class="link-light" href="{% url 'cart' %}">View Cart</a> </div>
+        <div class="view_c mt-2"> <a class="link-light" href="{% url 'cart' %}">View Cart</a> </div>
         <a href="{% url 'create_order' %}">
-          <div class="checkout mt-5"> Checkout </div>
+          <div class="checkout mt-2"> Checkout </div>
         </a>
       </div>
     </div>
