--- a/user_manager/templates/user_manager/login.html
+++ b/user_manager/templates/user_manager/login.html
@@ -47,7 +47,7 @@ Sign in
             <button type="submit" id="signup-facebook" class="signup-facebook"><i class="fab fa-facebook-f"></i> 
                 Continue with Facebook</button>
         </form>
-        <button type="button" id="signup-apple" class="signup-apple"> <i class="fab fa-apple"></i> Continue with Apple</button>
+        {% comment %} <button type="button" id="signup-apple" class="signup-apple"> <i class="fab fa-apple"></i> Continue with Apple</button> {% endcomment %}
 
         
     </div>
