--- a/blogs/static/blogs/blogs.css
+++ b/blogs/static/blogs/blogs.css
@@ -26,7 +26,6 @@ h2 {
 nav a {
   text-decoration: none;
   color: #ffe65c;
-  padding: 0 9%;
   margin-bottom: 1%;
   margin-top: 7%;
 }
@@ -442,14 +441,8 @@ footer h2 {
 }
 
 #decor {
-  width: 100vw;
+  width: 100%;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(50%, transparent), color-stop(50%, #8D0020));
   background: linear-gradient(0deg, transparent 50%, #8D0020 50%);
 }
 /*# sourceMappingURL=blogs.css.map */
-
-@media only screen and (max-width: 700px){
-    .m_blog_img{
-        margin-top: -5rem;
-    }
-}
