--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -24,6 +24,9 @@
                 display: none;
             }
         }
+        header nav a {
+            padding : 0% !important ; 
+        }
     </style>
     {% block css %}{% endblock css %}
 </head>
@@ -136,6 +139,10 @@
             </div>
             <img class="img-fluid" src="{%static 'pages_static/images/index/SignUpThanks.svg' %}" alt="">
         </div>
+        <div style="position: fixed; bottom: 10px; right: 10px; z-index: 999;" class="d-flex justify-content-end">
+            <a class="call_us" href="tel:9336940122"><img style="width:50px;" src="{%static 'pages_static/images/index/call1.png' %}" alt=""></a>
+            <a target="blank" href="https://api.whatsapp.com/send/?phone=+919336940122"><img style="width:50px;" src="{%static 'pages_static/images/index/whatsAppLogo1.png' %}" alt=""></a>
+        </div>
         {% block body %}
         {% endblock body %}
     </main>
@@ -217,10 +224,6 @@
                 <div class="d-flex justify-content-center">© 2022 &nbsp; <a href="/">Panaya.in</a> &nbsp; All Rights Reserved</div>
                 <div class="d-flex justify-content-center"> DESIGNED BY &nbsp;<a href="https://www.racreators.com/" target="blank"> R A Creators</a></div>
             </div>
-        </div>
-        <div class="d-flex justify-content-end">
-            <a class="call_us" href="tel:9336940122"><img style="width:50px;" src="{%static 'pages_static/images/index/call.jpg' %}" alt=""></a>
-            <a target="blank" href="https://api.whatsapp.com/send/?phone=+919336940122"><img style="width:50px;" src="{%static 'pages_static/images/index/whatsAppLogo.png' %}" alt=""></a>
         </div>
     </footer>
     
