--- a/user_manager/templates/user_manager/order_details.html
+++ b/user_manager/templates/user_manager/order_details.html
@@ -205,7 +205,6 @@ My Order Details
                         <div class="t_summary" id='delivered'></div>
                     </div>
                 </div>
-                
             </div>
         </div>
     </div>
@@ -252,39 +251,13 @@ My Order Details
     function closeFeedback(){
         feedback.style.display = 'none';
     }
-{% comment %} 
-    $('#send-feedback-button').click(function(e){
-        e.preventDefault();
-        feedback = document.querySelector('input[name="feedback"]:checked').value;
-        feedback_text = $('#feedback_text').val();
-        product_id = $('#product_id').val();
-        $.ajax({
-            url: "{% url 'feedback_product' %}",
-            type: "POST",
-            data: {
-                'feedback': feedback,
-                'text': feedback_text,
-                'product_id': product_id
-            },
-            success: function(response) {
-                if (response == 200) {
-                    alert("Thanks for the feedback!");
-                } else {
-                    alert('Error in sending feedback');
-                }
-            },
-            error: function(response) {
-                alert('Error in sending feedback');
-            }
-        });
-    }) {% endcomment %}
 
     $(document).ready(function(){
         $.ajax({
             url: "{% url 'get_order_tracking' order.id %}",
             type: "GET",
             success: function(response) {
-                var res = JSON.parse(response);
+                alert('Got Data');
             },
             error: function(response) {
                 alert("Failed to fetch tracking data.");
