--- a/user_manager/templates/user_manager/profile_add_address.html
+++ b/user_manager/templates/user_manager/profile_add_address.html
@@ -33,7 +33,7 @@ Add Address
         </div>
         <div class="form-group">
            
-            <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Enter your Postal Code" required>
+            <input pattern="[0-9]{6}" type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Enter your Postal Code" required>
         </div>
         <div class="form-group">
             <input type="text" class='entry' name="state" id="state" class="form-control" placeholder="Enter your State" required>
