--- a/pages_static/templates/pages_static/contactUs.html
+++ b/pages_static/templates/pages_static/contactUs.html
@@ -10,11 +10,17 @@ Contact Us
 {% endblock title %}
 
 {% block body %}
-    <div class="prod_sec_header">
-        <div class="head_top"></div>
-        <div class="header">Contact Us</div>
-        <div class="head_bottom"></div>
-    </div>
+<style>
+  body{
+    background-color : #FFEFD1;
+  }
+</style>
+  <section id="heading" class="section-heading">
+    <img src="{% static 'pages_static/images/section-heading-decor.png' %}" alt="" />
+    <h1>Contact Us</h1>
+    <img class="flip-horizontal" src="{% static 'pages_static/images/section-heading-decor.png' %}" alt="" />
+  </section>
+
     <div class="contact" style="position: relative;">
         <img class="c_img" src="{% static 'pages_static/images/productImages/Rectangle 366.png' %}" alt="">
         <div class="touch">Get In Touch With Us</div>
@@ -83,10 +89,11 @@ Contact Us
             <div class="service_details">support@panaya.in</div>
         </div>
     </div>
-    <div class="container mt-5 mb-5">
+    {% comment %} <div class="container mt-5 mb-5">
         <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin.Lorem ipsum dolor sit amet</div>
         <div class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin.</div>
         <div class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin.</div>
-    </div>
+    </div> {% endcomment %}
+    <div class="my-2"></div>
 </script>
 {% endblock body %}
