--- a/blogs/templates/blog_post.html
+++ b/blogs/templates/blog_post.html
@@ -16,7 +16,7 @@
     </div>
 </section>
 
-<section id='post' class='story container-md mx-auto'>
+<section id='post' class='container-md mx-auto'>
 
     
     <div class='row'>
